# chipify

./: .gitattributes  .gitignore  CHANGELOG.md  CNAME  CONTRIBUTING.md  LICENSE  MANIFEST.in  PLUGINS.md  README.md  check_imports.py  context.md  install.sh  pyproject.toml  setup.py
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
chipify/: __init__.py  analyses.py  analyzer.py  app_config.py  cli.py  data_loader.py  debug_export.py  export_latex.py  expression.py  gui_tk.py  md_export.py  multiplot_window.py  pdf_export.py  plot_manager.py  plugin_loader.py  preflight.py  project_config.py  remote_dispatcher.py  run_meta.py  schema.py  settings.py  simulator.py  util.py
chipify/_server/: __init__.py  app.py  auth.py  chipify-remote.sh  jobs.py  protocol.py  tls.py
chipify/engines/: __init__.py  abort.py  base.py  ngspice.py  rawfile.py  staging.py  vacask.py  xschem.py
chipify/exporters/: __init__.py  _white_bg.py  png_exporter.py  svg_exporter.py
chipify/gui/: __init__.py  main_window.py  state.py  theme.py
chipify/gui/controllers/: __init__.py  history_controller.py  simulation_controller.py
chipify/gui/services/: __init__.py  data_loader.py  equation_service.py  main_thread_bridge.py  measurements.py  netlist_export.py  plugin_context.py  scatter_hover.py  throttled_redraw.py  transient_loader.py  yaml_editor_service.py
chipify/gui/tabs/: __init__.py  base.py
chipify/gui/widgets/: __init__.py  export_button.py  remote_console.py  run_annotation_dialog.py  scrollable_option_menu.py  scrolling.py  settings_window.py  treeview_styling.py  yaml_dumper.py
chipify/gui_qt/: __init__.py  app.py  main_window.py  multiplot_window.py  theme.py
chipify/gui_qt/controllers/: __init__.py  history_controller.py  simulation_controller.py
chipify/gui_qt/services/: __init__.py  canvas_menu.py  figure_export.py  latex_export.py  main_thread.py  throttle.py
chipify/gui_qt/tabs/: __init__.py  analytics_tab.py  editor_tab.py  equations_tab.py  histogram_tab.py  measurements_tab.py  transient_tab.py
chipify/gui_qt/widgets/: __init__.py  helpers.py  mpl_canvas.py  run_annotation_dialog.py  settings_dialog.py
chipify/gui_qt/workers/: __init__.py  sim_worker.py
chipify/plot_plugins/: __init__.py  distribution_plots.py
chipify/uikit/: __init__.py  state.py
chipify/uikit/services/: __init__.py  equation_service.py  measurements.py  netlist_export.py  plugin_context.py  scatter_hover.py  transient_loader.py  yaml_editor_service.py
chipify/uikit/widgets/: __init__.py  yaml_dumper.py
examples/: README.md  datasheet.yaml  example_datasheet.yaml
examples/common_source_amplifier/datasheets/: corners.yaml  mismatch.yaml
examples/common_source_amplifier/tb/: tb_csa_comp.sch  tb_csa_gain.sch  tb_csa_op.sch
examples/ota/datasheets/: corner.yaml
examples/ota/sch/: ota.sch  ota.sym
examples/ota/tb/: tb_ota_gain.sch  tb_ota_op.sch  tb_ota_tran.sch
examples/plugins/: run_info_tab.py
examples/source_follower/datasheets/: corners.yaml  corners_vacask.yaml  mismatch.yaml
examples/source_follower/sch/: source_follower.sch  source_follower.sym
examples/source_follower/tb/: nmos.sch  tb_sf_gain.sch  tb_sf_op.sch  tb_sf_op_vacask.sch  tb_sf_tran.sch  vacask_demo.sch
examples/source_follower/tb/simulations/: tb_sf_op_vacask.spice
in/: datasheet.yaml  simple.yaml
simify/: cli.py  gui.py  gui_tk.py  pdf_export.py  plot_manager.py  simulator.py  util.py
src/: analyzer.py  settings.py  simify.py  simulator.py  util.py
tb/: tb_cm_feedback_loop.sch  tb_mult_cell_gain.sch  tb_mult_cell_op.sch
tests/: test_analyses_raw.py  test_builtin_plot_plugins.py  test_data_loader_history.py  test_data_loader_summary.py  test_datasheet_equations.py  test_engine_registry.py  test_equation_service.py  test_export_latex.py  test_expression.py  test_gui_qt_smoke.py  test_gui_smoke.py  test_netlist_export.py  test_ng2vc.py  test_plugin_context.py  test_remote_dispatcher.py  test_run_meta.py  test_server_app.py  test_simulator_engine.py  test_simulator_persist.py  test_tls.py  test_util_range_dsl.py  test_yaml_editor_service.py
tools/server/: Dockerfile.iic-osic-tools+chipify  bootstrap.sh  chipify-remote.sh
