# Chipify uses setup.py for packaging metadata and dependencies.
# This file only carries developer-tooling configuration (mypy + pytest).
#
# System dependencies (cannot be declared here — pip only installs Python wheels).
# The Qt GUI is built on PySide6-Essentials (the pip dependency; see setup.py),
# which needs two kinds of system libraries:
#   * Base Qt runtime: libegl1 / libgl1 (libEGL.so.1 / libGL.so.1). dlopened when
#     QtWidgets is imported — required even for the headless offscreen test suite,
#     so without them `pytest` fails to import PySide6 (ImportError: libEGL.so.1).
#   * On-screen GUI: libxcb-cursor0 (Qt >= 6.5) for the xcb/XWayland platform;
#     without it a Wayland session falls back to native Wayland where dropdown
#     popups don't close.
# `./install.sh` installs all of these on Debian/Ubuntu; elsewhere use your
# package manager (e.g. apt: libegl1 libgl1 libxcb-cursor0).

# ── build system ──────────────────────────────────────────────────────────────
# Metadata itself stays in setup.py; this just pins the PEP 517 backend so
# builds don't depend on whatever setuptools happens to be installed.
[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

# ── mypy strict config ────────────────────────────────────────────────────────
[tool.mypy]
strict = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
python_version = "3.11"
exclude = ["tests/"]

# Third-party packages without stubs
[[tool.mypy.overrides]]
module = [
    "tqdm.*",
    "jinja2.*",
    "matplotlib.*",
    "scipy.*",
    "asteval.*",
    "numexpr.*",
    "pyopus.*",
]
ignore_missing_imports = true

# GUI and report modules are whitelist-typed gradually
[[tool.mypy.overrides]]
module = [
    "chipify.gui_qt.*",
    # matplotlib-event-handler heavy; typed gradually (pre-existing debt).
    "chipify.uikit.services.scatter_hover",
    "chipify.uikit.services.netlist_export",
    "chipify.pdf_export",
    "chipify.md_export",
    "chipify.export_latex",
    "chipify.debug_export",
    "chipify.run_meta",
    "chipify.project_config",
    "chipify.plugin_loader",
    "chipify.analyzer",
    "chipify.analyses",
    "chipify.plot_manager",
    "chipify.plot_plugins.*",
    "chipify.simulator",
    # Engine implementations moved out of chipify.simulator (same gradually-
    # typed code, same debt status).
    "chipify.engines.*",
    "chipify.cli",
]
ignore_errors = true

# ── pytest config ─────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
